--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -237,7 +237,7 @@
     display: none;
     i {
       font-size: 26px;
-      color: $secondary;
+      color: #E57A84;
     }
     @media(max-width: 991px) {
       display: flex;    
